...
        case offline
        case synchronizing

        var message: String {
            switch self {
            case .complete:
                "Synchronization complete"
            case let .failed(message):
                message
            case .idle:
                "Ready to synchronize"
            case .offline:
                "Offline library"
            case .synchronizing:
                "Synchronizing"
            }
        }
    }

...
